[project]
name = "murner"
version = "0.1.0"
description = "Moves URNs using the NRS api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0",
    "coverage>=7.6.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "requests>=2.32.3",
    "ruff>=0.9.4",
]

[tool.pytest.ini_options]
addopts = "--cov"
pythonpath = [
    "./src/murner"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

